# adv-prompt-techniques

./: .env.example  .gitignore  README.md  pyproject.toml
chain-of-thought/: README.md  __init__.py  main.py
docs/: results.md
meta-prompting/: README.md  __init__.py  main.py
prompt-chaining/: README.md  __init__.py  main.py
react/: README.md  __init__.py  main.py
rsip/: README.md  __init__.py  main.py
tree-of-thoughts/: README.md  __init__.py  main.py
